syntax = "proto3";

message CategoryMessage{
  string id = 1;
  string name = 2;
  string description = 3;
  bytes imageBytes = 4;
}

message AddCategoryRequest {
  CategoryMessage category = 1;
}

message AddCategoryResponse {
  CategoryMessage category = 1;
}

message GetCategoryByIdRequest {
  string id = 1;
}

message GetCategoryByIdResponse {
  CategoryMessage category = 1;
}

message GetCategoriesRequest {
  int32 skip = 1;
  int32 limit = 2;
}

message GetCategoriesResponse {
  repeated CategoryMessage category = 1;
}

message UpdateCategoryRequest {
  CategoryMessage category = 1;
}

message UpdateCategoryResponse {
  CategoryMessage category = 1;
}

message RemoveCategoryRequest {
  string id = 1;
}

message RemoveCategoryResponse {
  string id = 1;
}

service CategoryApi {
  rpc addCategory(AddCategoryRequest) returns (AddCategoryResponse);
  rpc getCategoryById(GetCategoryByIdRequest) returns (GetCategoryByIdResponse);
  rpc getCategories(GetCategoriesRequest) returns (GetCategoriesResponse);
  rpc updateCategory(UpdateCategoryRequest) returns (UpdateCategoryResponse);
  rpc removeCategory(RemoveCategoryRequest) returns (RemoveCategoryResponse);
}